fix home page alignment

--- a/frontend/home.css
+++ b/frontend/home.css
@@ -9,7 +9,7 @@ html {
     justify-content: space-between;
     align-items: center;
     height: 100vh;
-    padding: 0 100px;
+    /* padding: 0 100px; */
 }
 .container {
     position: relative;
@@ -77,7 +77,7 @@ html {
     gap: 20px;
     margin-top: 20px;
     width: 300px;
-    transform: translateX(-100px);
+    transform: translateX(-300px);
 }
 .button {
     display: flex; 
